--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -1,5 +1,6 @@
 {% extends 'base.html' %} {% block content %}
 {% load static %}
+{% load crispy_forms_tags %}
 
 <div class="masthead">
     <div class="container">
@@ -31,7 +32,14 @@
     </div>
     <!-- Displaying count of comments -->
     <div class="row">
-        <i class="far fa-comments"></i> {{ comment_count }}
+        <div class="col-12">
+            <strong class="text-secondary">
+                <i class="far fa-comments"></i> {{ comment_count }}
+            </strong>
+        </div>
+        <div class="col-12">
+            <hr>
+        </div>
     </div>
     <!-- Displaying Comments -->
     <div class="row">
@@ -45,16 +53,13 @@
                     {% if not comment.approved and comment.author == user %}
                     faded{% elif not comment.approved %} d-none{% endif %}">
                     <p class="font-weight-bold">
-                        <!-- {{ comment.author }} -->
-                        name
+                        {{ comment.author }}
                         <span class="font-weight-normal">
-                            <!-- {{ comment.created_on }} -->
-                            date
+                            {{ comment.created_on }}
                         </span> wrote:
                     </p>
                     <div id="comment{{ comment.id }}">
-                        <!-- {{ comment.body | linebreaks }} -->
-                        text
+                        {{ comment.body | linebreaks }}
                     </div>
                     {% if not comment.approved and comment.author == user %}
                     <p class="approval">
@@ -64,6 +69,22 @@
                 </div>
                 <!-- Our for loop ends here -->
                 {% endfor %}
+            </div>
+        </div>
+        <!-- Creating New Comments -->
+        <div class="col-md-4 card mb-4 mt-3">
+            <div class="card-body">
+                {% if user.is_authenticated %}
+                <h3>Leave a comment:</h3>
+                <p>Posting as: {{ user.username }}</p>
+                <form id="commentForm" method="post" style="margin-top: 1.3em;">
+                    {{ comment_form | crispy }}
+                    {% csrf_token %}
+                    <button id="submitButton" type="submit" class="btn btn-signup btn-lg">Submit</button>
+                </form>
+                {% else %}
+                <p>Log in to leave a comment</p>
+                {% endif %}
             </div>
         </div>
     </div>
